csrfトークン的なものを追加

--- a/minitwit/templates/timeline.html
+++ b/minitwit/templates/timeline.html
@@ -29,8 +29,7 @@
       <div class="twitbox">
         <h3>What's on your mind {{ g.user.username }}?</h3>
         <form action="{{ url_for('add_message') }}" method="post">
-          <p><input type="text" name="text" size="60"><!--
-          --><input type="submit" value="Share">
+          <p><input type="text" name="text" size="60"><input type="hidden" name="token" value="{{g.user.token}}"><input type="submit" value="Share"></p>
         </form>
       </div>
     {% endif %}
